tests/kyverno/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: verify-devguard-image-provenance
policies:
  - policies/kyverno-policy.yaml
resources:
  - resources/pod-devguard.yaml
  - resources/pod-devguard-web.yaml
results:
  - policy: verify-image-signatures
    rule: verify-devguard-images
    resources:
      - devguard-test
    kind: Pod
    result: pass
  - policy: verify-image-signatures
    rule: verify-devguard-images
    resources:
      - devguard-web-test
    kind: Pod
    result: pass
